feat: Simplifies jvm libraries
Greatly reduces gradle build file complexity. Updates all dependencies.

CU-86c9h3rje